<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Log_In"
    android:background="@drawable/log_in_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_In_Title"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_In_Subheading"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:shadowColor="#000000"
            android:shadowRadius="10"
            android:shadowDx="-10"
            android:shadowDy="-5"
            />

        <EditText
            android:id="@+id/log_in_number_editText"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/log_in_name_bg"
            android:hint="@string/log_In_Name_Hint"
            android:padding="5dp"
            android:textColor="#4e4e4e"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="number"
            android:maxLength="11"/>

        <EditText
            android:id="@+id/log_in_password_editText"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/log_in_password_bg"
            android:hint="@string/log_In_Password_Hint"
            android:padding="5dp"
            android:textColor="#4e4e4e"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foget_Password"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/log_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_In_Button"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:background="#58c9b9"/>

        <Button
            android:id="@+id/log_in_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/log_in_Sign_In_Button"
            android:textSize="20sp"
            android:background="@drawable/sign_in_button"/>
    </LinearLayout>








</android.support.constraint.ConstraintLayout>