<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_In"
    android:background="@drawable/log_in_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/sign_in_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_number"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/sign_in_number_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_in_numberHint"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="15sp"
                android:textColor="#4e4e4e"
                android:inputType="number"
                android:maxLength="11"
                android:background="@android:color/white"
                android:padding="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/sign_in_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_password"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/sign_in_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_in_passwordHint"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="15sp"
                android:textColor="#4e4e4e"
                android:inputType="textPassword"
                android:background="@android:color/white"
                android:padding="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/sign_in_resurePassword_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_resurePassword"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/sign_in_resurePassword_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_in_passwordHint"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="15sp"
                android:textColor="#4e4e4e"
                android:inputType="textPassword"
                android:background="@android:color/white"
                android:padding="5dp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/sign_in_identifyingCode_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_identifyingCode"
                android:textSize="20sp"/>

            <TextView

                android:id="@+id/send_identifyingCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#EFDC05"
                android:text="@string/sign_in_sendIdentifyingCode"
                android:textSize="10sp"
                android:padding="10dp"/>
            <EditText
                android:id="@+id/sign_in_identifyingCode_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_in_identifyingCodeHint"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="15sp"
                android:textColor="#4e4e4e"
                android:inputType="number"
                android:background="@android:color/white"
                android:padding="5dp"
                />

        </LinearLayout>
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_Button"
            android:layout_marginTop="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_gravity="center_horizontal"
            android:background="#F68657"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>